test/success/short_circuit.cvc
int rv = 0;

bool kaas() {
    rv = 1;
    return true;
}

export int main() {
    if (false && kaas()) {}
    return rv;
}
