test/fail/short_circuit_bad.cvc
int rv = 0;

export int main() {
    if (false && kaas()) {}
    return rv;
}
